# AStarPathfinding

./: CMakeLists.txt  main.cpp
code/grid/: grid.cpp  grid.h
lib/devlib/: buildconf.h  configuration.cpp  configuration.hpp  log.cpp  math.hpp  number.hpp  vector.hpp
